--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
 
 <body>
 
-
-
-  
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
   <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
@@ -247,7 +244,7 @@
 
         <div class="section-title">
           <h2>Education</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>My education and professional mission</p>
         </div>
 
         <div class="row">
@@ -476,7 +473,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/lahcen.jpeg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/lahcen.jpg" class="testimonial-img" alt="">
                 <h3>Lahcen Hmamou</h3>
                 <h4>Friend</h4>
                 <p>
