--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                 <h4>Friend</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Working with Radostin was a game-changer for my business. Their expertise and attention to detail helped me achieve results I never thought possible. I highly recommend their services!                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  Working with Radostin was a game-changer for our business. Their expertise and attention to detail helped me achieve results I never thought possible. I highly recommend their services!                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
             </div><!-- End testimonial item -->
