--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <h4>OwnCloud</h4>
                 <p>Cloud Service</p>
                 <div class="portfolio-links">
-                  <a href="https://github.com/raduoosiesebre/MP08UF2-Aplicacions-Web" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="https://github.com/raduoosiesebre/MP08UF2-Aplicacions-Web/tree/cf2901798d51daa4776a145e7563da95e60e2c2a/Radostin.OwnCloud" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -342,7 +342,7 @@
                 <h4>Moodle</h4>
                 <p>Learning Platform</p>
                 <div class="portfolio-links">
-                  <a href="https://github.com/raduoosiesebre/MP08UF2-Aplicacions-Web/tree/main/Radostin.Moodle" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="https://github.com/raduoosiesebre/MP08UF2-Aplicacions-Web/tree/cf2901798d51daa4776a145e7563da95e60e2c2a/Radostin.Moodle" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
